--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Home-page */
+.container {
+  height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.result {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.list__item {
+  border-radius: 8px;
+  background-color: #F5F5F7;
+  padding: 0.75rem 3rem 0.75rem 1rem;
+  font-size: 1rem;
+  color: black;
+  margin: .5rem 0;
+}
+
+.result__link {
+  cursor: pointer;
+  list-style: none;
+  text-decoration: none;
+}
+
+.list-item:hover {
+  background-color: #9e9e9e;
+}
+
+.result__list  {
+  padding-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  width: 100%;
+}
+
+/* Weather by Geolocation */
+
+.main_container {
+  display: flex;
+  flex-flow: row nowrap;
+  height: 100vh;
+}
+
+.main_info, .icon_description, .wind_info, .detail_info {
+  display: flex;
+  flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 1rem 1.5rem;
+  padding: 0 1rem;
+  border: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.min_max_temp, .main_temp_container {
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.day, .temp {
+  font-size: 3rem;
+  font-weight: bold;
+  margin: 1rem 0;
+}
+
+.min_temp, .max_temp, .description, .wind {
+  font-size: 1.5rem;
+}
+
+.main_temp_container {
+  display: flex;
+  align-items: center;
+}
+
+/* Weather by City Name */
+
+.weather-by-city-container {
+  height: 100vh;
+}
+
+.content {
+  margin: 1rem;
+}
+
+.input-element {
+  width: 8rem;
+  height: 1.3rem;
+  font-size: 1.3rem;
+  margin-right: .5rem;
+}
+
+.add-button {
+  height: 1.5rem;
+  width: 3rem;
+  font-size: 1rem;
+}
+
+.list-caption {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+}
+
+.list-item {
+  list-style: inherit;
+  font-size: 1.7rem;
+}
+
+.list-item:hover {
+  color: orange;
+}
+
+.link-element {
+  color: inherit;
+  text-decoration: underline;
+}
+
+/* Navigation */
+
+.navigation-bar {
+  padding: .5rem 1rem;
+  background: rgb(135,14,255);
+  background: linear-gradient(180deg, rgba(135,14,255,1) 0%, rgba(203,131,255,0) 100%); 
+}
+
+.navigation-bar > a {
+  padding: 0 .5rem;
+  color: black;
+  text-decoration: none;
+  font-size: 1.3rem;
+}
+
+.navigation-bar > a:hover {
+  color: white
+}
+
+/* Weather */
+
+.city-name {
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 600;
 }
